[tool.poetry]
name = "willow_core"
version = "0.1.0"
description = "Core python libraries shared amongst various projects"
authors = ["roboto84 <7658704+roboto84@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
